creusot/tests/should_fail/recursion/simple.stderr
error: Recursive function without a `#[variant]` clause
 --> simple.rs:5:1
  |
5 | fn recurses(b: bool) {
  | ^^^^^^^^^^^^^^^^^^^^
  |
note: Recursive call happens here
 --> simple.rs:7:9
  |
7 |         recurses(!b);
  |         ^^^^^^^^^^^^

error: aborting due to 1 previous error

